Creato con Colab

--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -300,6 +300,7 @@
         "def train(epoch, model, train_loader, criterion, optimizer):\n",
         "    #set the model to training mode\n",
         "    model.train()\n",
+        "    #tensor which contains only a single number\n",
         "    running_loss = 0.0\n",
         "    correct = 0\n",
         "    total = 0\n",
@@ -310,7 +311,7 @@
         "        #Zero the gradients (accumulated by default)\n",
         "        optimizer.zero_grad() # clears the old gradients\n",
         "        #forward\n",
-        "        outputs = model(inputs)\n",
+        "        outputs = model(inputs) #tensor: [batch_size, num_classes]\n",
         "        #Loss function\n",
         "        loss = criterion(outputs, targets)\n",
         "        #Backpropagation\n",
@@ -318,10 +319,20 @@
         "        #optimizer\n",
         "        optimizer.step()\n",
         "\n",
-        "\n",
+        "        #retrieves the tensor value into float\n",
         "        running_loss += loss.item()\n",
+        "        #searches the maximum value for each row, for each example it takes the maximum predicted value (the class)\n",
         "        _, predicted = outputs.max(1)\n",
+        "        #indicates how many samples we have processed\n",
         "        total += targets.size(0)\n",
+        "        \"\"\"\n",
+        "        compares each element by element:\n",
+        "        predicted = tensor([1, 0, 2])\n",
+        "        targets = tensor([1, 1, 2])\n",
+        "        predicted.eq(targets) → tensor([True, False, True])\n",
+        "\n",
+        "        finally we sum all True labels to retrieves the correct number of predictions\n",
+        "        \"\"\"\n",
         "        correct += predicted.eq(targets).sum().item()\n",
         "\n",
         "    train_loss = running_loss / len(train_loader)\n",
@@ -360,6 +371,7 @@
         "\n",
         "    correct, total = 0, 0\n",
         "\n",
+        "    #disables the gradient calculation\n",
         "    with torch.no_grad():\n",
         "        for batch_idx, (inputs, targets) in enumerate(val_loader):\n",
         "            inputs, targets = inputs.cuda(), targets.cuda()\n",
