Creato con Colab

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1deYWPDAhX+WHNlHm+DYg",
+      "authorship_tag": "ABX9TyNB/d/1Wgv3eFh+lHe71k3g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "metadata": {
         "id": "pybC9QxMHTEY"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "id": "x29vHvwNH5HB",
         "outputId": "e65756ba-0d24-43b5-d728-77d768d49da7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "id": "nIuRMprGIyEd",
         "outputId": "8fed1bc7-b710-4940-b1cc-187a94b5cb0c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
         "id": "XyuP86KfJBRw",
         "outputId": "0e7a5e57-c77e-45fb-91de-5a546a30ea35"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +180,7 @@
         "id": "AURwdREIJkNa",
         "outputId": "e0428936-86ec-48de-f91d-dcfc2312453b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         "id": "Gqp1kYDJKeqV",
         "outputId": "188941fc-7b9d-4f4b-cd91-ba35c822246a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,7 @@
         "id": "O9fJ0ArkK1Zp",
         "outputId": "b653e5b6-a06c-42c9-f996-91a991a95df9"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +310,7 @@
         "id": "Pbjd-QCNLm_R",
         "outputId": "dbd499ff-cf21-4dd5-c5ea-9960a36d8235"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
         "id": "O93FQOweV-ie",
         "outputId": "bd3f1860-0d5e-4d90-f9d3-c914f3daea8f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "id": "WXPtOIXzWYG3",
         "outputId": "8b7b4c58-bc59-46bb-b89a-281441f12100"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +510,7 @@
         "id": "MZRoAUqUXjFd",
         "outputId": "b807320e-4063-4685-a68f-67b9af3ae527"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +542,7 @@
       "metadata": {
         "id": "MiNpzla4X3J_"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
         "id": "cQNuh2jvYFSQ",
         "outputId": "5d047aea-aa05-4b46-ac43-582091812db3"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,7 +627,7 @@
         "id": "mumhDENaZT2q",
         "outputId": "a8ced420-e27c-4236-be99-c9dbef1e276d"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +671,7 @@
         "id": "1b37gklzaK_Z",
         "outputId": "eecf0b4b-0903-4b37-b56d-4b6e8808b2be"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
         "id": "3706j_R0atPF",
         "outputId": "77291620-b7e0-49fd-89e2-27d26e146497"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +804,7 @@
         "id": "Oxv8z38VapM-",
         "outputId": "1e01123e-4e4a-4f39-924b-d6379b186225"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -874,7 +874,7 @@
         "id": "q2xp3nmqd1wU",
         "outputId": "3a2d0576-e1da-4ae0-b51e-ba40020e8587"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,7 +933,7 @@
         "id": "opegslRXfxxk",
         "outputId": "5be91495-17dd-4f10-e7cd-7543abf80c46"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +982,7 @@
         "id": "rQgnrwsxhJs1",
         "outputId": "c79ce456-6f71-4166-ef1f-e12b338d85aa"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,13 +1023,73 @@
         "#ValueError: Index contains duplicate entries, cannot reshape\n",
         "# pivot = data.pivot(index='Name', columns='Month', values='Sales') --> we have some duplicates\n",
         "\n",
-        "pivot = data.pivot_table(index='Name', columns='Month', values='Sales', aggfunc='sum')"
+        "#used when the pairs columns/rows have duplicates\n",
+        "pivot = data.pivot_table(index='Name', columns='Month', values='Sales', aggfunc='sum')\n",
+        "print(pivot)"
       ],
       "metadata": {
-        "id": "0I34hW3liFg3"
+        "id": "0I34hW3liFg3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b6aac6ef-50c0-43f1-d07b-e97064fb5330"
       },
-      "execution_count": 102,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Month    Feb    Jan\n",
+            "Name               \n",
+            "Alice    NaN  410.0\n",
+            "Bob    330.0    NaN\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Define tuples for multi-level indexing\n",
+        "index = pd.MultiIndex.from_tuples([\n",
+        "    ('2023-01', 'NY'),\n",
+        "    ('2023-01', 'LA'),\n",
+        "    ('2023-02', 'NY'),\n",
+        "    ('2023-02', 'LA')\n",
+        "], names=['date', 'city'])\n",
+        "\n",
+        "df = pd.DataFrame({\n",
+        "    'temperature': [30, 50, 28, 55],\n",
+        "    'humidity': [60, 40, 65, 35]\n",
+        "}, index=index)\n",
+        "\n",
+        "print(df)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1YNIxJHS76IC",
+        "outputId": "b0a2834a-db0b-4c26-a51f-97fa23f93026"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              temperature  humidity\n",
+            "date    city                       \n",
+            "2023-01 NY             30        60\n",
+            "        LA             50        40\n",
+            "2023-02 NY             28        65\n",
+            "        LA             55        35\n"
+          ]
+        }
+      ]
     }
   ]
 }
