Creato con Colab

--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGa76az/27DcAoNycuhBC8",
+      "authorship_tag": "ABX9TyPuZk5O+QjEHLgORd9IUTrY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1566,6 +1566,62 @@
       "metadata": {
         "id": "GA9Sd0ckDV_F"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **3D Plotting in Matplotlib**\n",
+        "3D plotting allows you to show data using X, Y, and Z axes — like plotting a 3D surface or scatter plot. This helps when your data depends on three variables, or you want to show depth and structure."
+      ],
+      "metadata": {
+        "id": "Socyvqt0GHa_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from mpl_toolkits.mplot3d import Axes3D"
+      ],
+      "metadata": {
+        "id": "P-WCpyrtHHiZ"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#how to create the 3d plot\n",
+        "ax = fig.add_subplot(..., projection='3d')"
+      ],
+      "metadata": {
+        "id": "v4WZpdW4HPID"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from mpl_toolkits.mplot3d import Axes3D\n",
+        "import numpy as np\n",
+        "\n",
+        "fig = plt.figure()\n",
+        "# 111 means \"1 row, 1 column, plot 1\", projection turns it into a 3D chart\n",
+        "ax = fig.add_subplot(111, projection='3d')\n",
+        "\n",
+        "\n",
+        "x = np.linspace(-5, 5, 100)\n",
+        "y = np.linspace(-5, 5, 100)\n",
+        "\n",
+        "#creates a 2d Matrix for all combinations of x and y\n",
+        "X, Y = np.meshgrid(x, y) #So X and Y are full grids — 100×100 arrays.\n"
+      ],
+      "metadata": {
+        "id": "FkmBzku3HTYn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
